<resources>
    <string name="app_name">My Application</string>
    <string name="ازمایشگاه">ازمایشگاه</string>
    <string name="LOGIN">LOGIN</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="VerifyCode">Verify Code</string>
    <string name="TestBlood">Test Blood</string>
    <string name="DonateBlood">Donate Blood</string>
    <string name="TutorialVideo">Tutorial Video</string>
    <string name="MyProfile">My Profile</string>
    <string name="Choose">Choose your laboratory</string>
    <string name="AGHa">AGHA KHAN LABORATORY</string>
    <string name="DOW">DOW LABORATORY</string>
    <string name="S">Shaukat Khanum LABORATORY</string>
    <string name="FAYAZ">FAYAZ LABOARTORY</string>
    <string name="QUETTA">QUETTA LABORATORY</string>
    <string name="RBCRedBloodCell1500rs">RBC Red Blood Cell  1500rs</string>
    <string name="HIV">HIV Antibody Test  5500r/s</string>
    <string name="TSHThyroidStimulatinghormone3000rs">TSH Thyroid Stimulating hormone  3000rs</string>
    <string name="Urina">Urinalysis  4000r/s</string>
    <string name="Pregnancy">Pregnancy 6000r/s</string>
    <string name="LFTLiver">LFT Liver Function Panel 15000r/s</string>
    <string name="Hemoglobin">Hemoglobin Test 3500r/s</string>
    <string name="DAWLabTestList">DAW Lab Test List</string>
    <string name="QuettaLabTestList">Quetta Lab Test List</string>
    <string name="RegistrationForm">Registration form</string>
    <string name="Name">Name</string>
    <string name="Fname">F-Name</string>
    <string name="Age">Age</string>
    <string name="Male">Male</string>
    <string name="Fmale">F-Male</string>
    <string name="Cnic">CNIC NO</string>
    <string name="DDMMYY">DDMMYY</string>
    <string name="Price">Price</string>
    <string name="Location">Location</string>
    <string name="phlebotomist">phlebotomist is on way</string>
    <string name="HisName">His Name</string>
    <string name="BikeNumber">Bike Number</string>
    <string name="Test">Test Name with price and time</string>
    <string name="Check">Check Nearest Blood Bank</string>
    <string name="NotifyDonor">Notify Donor</string>
    <string name="BLOOD">BLOOD BANK LOCATION</string>
    <string name="BloodGroup">B_Positive</string>
    <string name="testreports">Test-Reports</string>
    <string name="testlist">Test-List</string>
    <string name="BloodREcive">Blood-Receive</string>
    <string name="AllTesrreports">ALL TEST REPORTS</string>
    <string name="test1pdf">TEST 1 PDF</string>
    <string name="test2pdf">TEST 2 PDF</string>
    <string name="test3pdf">TEST 3 PDF</string>
    <string name="test4pdf">TEST 4 PDF</string>
    <string name="alltestlistwithdate">ALL TEST LIST WITH DATE AND DAY</string>
    <string name="sugartestwithdate">SUGAR TEST -800 WEDNESDAY 4TH OCT-2019</string>
    <string name="t4t3t5testwithdate">T3 T4 T5 THYROID 1800 FRIDAY 9TH-NOVEMBER-2019</string>
    <string name="DESOXYCORYISOL2"> DESOXYCORYISOL,SERUM 15200 MONDAY 13-SEPTEMBER 2019</string>
    <string name="METABOLIC">METABOLIC SCREEN 8000 SATURDAY 18-AUGUST 2019</string>
    <string name="blloddonatewithdate">BLOOD DONATE DATE AND DAY</string>
    <string name="rbc">Regional blood center,11-October-2019,A+</string>
    <string name="bfll">BLOOD FOR LIFE,13 September-2019,AB+ </string>
    <string name="nbb">NATIONAL BLOOD BANK,12 JULY-2019,B+</string>
    <string name="SUNDAS">SUNDAS Foundation ,11 March-2019 ,O+</string>
    <string name="brwithdate">BLOOD RECIEVE DATE AND DAY</string>
    <string name="next">Next</string>
    <string name="callnow">Call Now</string>
    <string name="emn">Enter Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="c">Continue</string>
    <string name="ameerro">noerror</string>
    <string name="invalid">invalid_cnic</string>
    <string name="invalid_cnic">invalid_cnic</string>
    <string name="namerror">namerror</string>
    <string name="f_namerror">f_nameerror</string>
    <string name="DOB">DOB</string>
    <string name="DESOXYCORYISOSERUM">DESOXYCORYISOSERUM</string>
    <string name="UASSAY">UASSAY</string>
    <string name="THIOGUANIN">THIOGUANIN</string>
    <string name="A1ANTITRYSPSIN">A1ANTITRYSPSIN</string>
    <string name="ACETONE">ACETONE</string>
    <string name="ACTHPLASMA">ACTHPLASMA</string>
    <string name="bg">blood group</string>
    <string name="age">age</string>
    <string name="title_activity_locationmap">Map</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_bloodbanklocation">Map</string>
    <string name="title_activity_bloodbank_location">Map</string>
</resources>
