<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".donor_registration_form">


    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="101dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/textView23"
        android:layout_width="149dp"
        android:layout_height="37dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/ازمایشگاه"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="320dp"
        android:layout_height="396dp"
        android:layout_marginTop="28dp"
        android:background="@color/cardview_light_background"
        android:gravity="center_horizontal"
        android:text="@string/RegistrationForm"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        app:layout_constraintVertical_bias="0.273" />

    <EditText
        android:id="@+id/txtfname"
        android:layout_width="286dp"
        android:layout_height="44dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/Fname"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="285dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/Name"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="165dp"
        android:layout_height="94dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtfname"
        app:layout_constraintVertical_bias="0.028">

        <RadioButton
            android:id="@+id/rm"
            android:layout_width="115dp"
            android:layout_height="39dp"
            android:text="@string/Male"
            android:textColor="@color/red" />

        <RadioButton
            android:id="@+id/rf"
            android:layout_width="115dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:text="@string/Fmale"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.215"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton" />
    </RadioGroup>

    <EditText
        android:id="@+id/txtage"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Age"
        android:inputType="number"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView26"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/txtfname"
        app:layout_constraintVertical_bias="0.052" />



    <EditText
        android:id="@+id/txtbg"
        android:layout_width="273dp"
        android:layout_height="45dp"
        android:hint="@string/BloodGroup"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/textView26"
        app:layout_constraintEnd_toEndOf="@+id/textView26"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.871" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="137dp"
        android:layout_height="35dp"
        android:layout_marginTop="328dp"
        android:background="@drawable/box"
        android:text="Submit"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtage"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        app:layout_constraintVertical_bias="0.927" />


</androidx.constraintlayout.widget.ConstraintLayout>