<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".blood_recieve">

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="77dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toTopOf="@+id/textView47"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="217dp"
        android:layout_height="47dp"
        android:layout_marginBottom="404dp"
        android:gravity="center_horizontal"
        android:text="@string/ازمایشگاه"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="345dp"
        android:layout_height="433dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47"
        app:layout_constraintVertical_bias="0.817" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="202dp"
        android:layout_height="19dp"
        android:gravity="center_horizontal"
        android:text="@string/brwithdate"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView52"
        app:layout_constraintEnd_toEndOf="@+id/textView52"
        app:layout_constraintStart_toStartOf="@+id/textView52"
        app:layout_constraintTop_toTopOf="@+id/textView52"
        app:layout_constraintVertical_bias="0.071" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="75dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476"
        app:srcCompat="@drawable/test" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="274dp"
        android:layout_height="268dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView32"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="258dp"
        android:layout_height="41dp"
        android:text="@string/rbc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView54"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView54"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="256dp"
        android:layout_height="51dp"
        android:text="@string/bfll"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView54"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView55"
        app:layout_constraintVertical_bias="0.063"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="255dp"
        android:layout_height="58dp"
        android:text="@string/nbb"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView54"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView56"
        app:layout_constraintVertical_bias="0.108"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="241dp"
        android:layout_height="59dp"
        android:text="@string/SUNDAS"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView54"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView57"
        android:gravity="center_horizontal" />
</androidx.constraintlayout.widget.ConstraintLayout>