<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_profile">

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="71dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="183dp"
        android:layout_height="47dp"
        android:gravity="center_horizontal"
        android:text="@string/ازمایشگاه"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="334dp"
        android:layout_height="413dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="42dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"
        app:srcCompat="@mipmap/home" />

    <TextView
        android:id="@+id/myprofile"
        android:layout_width="154dp"
        android:layout_height="27dp"
        android:gravity="center_horizontal"
        android:text="@string/MyProfile"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38"
        app:layout_constraintVertical_bias="0.262" />

    <ImageView
        android:id="@+id/tr"
        android:layout_width="42dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        app:srcCompat="@mipmap/reports" />

    <TextView
        android:id="@+id/testreport"
        android:layout_width="156dp"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:text="@string/testreports"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

    <ImageView
        android:id="@+id/tl"
        android:layout_width="43dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677"
        app:srcCompat="@mipmap/test" />

    <TextView
        android:id="@+id/testlist"
        android:layout_width="161dp"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:text="@string/testlist"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView39"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="@+id/textView39"
        app:layout_constraintTop_toTopOf="@+id/textView39"
        app:layout_constraintVertical_bias="0.577" />

    <ImageView
        android:id="@+id/br"
        android:layout_width="46dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92"
        app:srcCompat="@mipmap/receive" />

    <TextView
        android:id="@+id/bloodrecieve"
        android:layout_width="166dp"
        android:layout_height="25dp"
        android:gravity="center_horizontal"
        android:text="@string/BloodREcive"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38"
        app:layout_constraintVertical_bias="0.888" />

    <ImageView
        android:id="@+id/bd"
        android:layout_width="40dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797"
        app:srcCompat="@mipmap/bb" />

    <TextView
        android:id="@+id/testblood"
        android:layout_width="169dp"
        android:layout_height="27dp"
        android:gravity="center_horizontal"
        android:text="@string/DonateBlood"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView39"
        app:layout_constraintVertical_bias="0.717" />

</androidx.constraintlayout.widget.ConstraintLayout>